kubernetes/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stateful-flask-svc
  namespace: stateful-flask
spec:
  type: ClusterIP
  selector:
    app: stateful-flask
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
